--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <Head>
 	<title>Hamro Jersey</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap" 
 	rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,7 +22,7 @@
 				<li><a href="account.html">Account</a></li>
 			</ul>
 		</nav>
-		<a href="cart.html"><img src="img/cart.png" width="40px" height="40px"> </a>
+		<a href="cart.html"><img src="cart.png" width="40px" height="40px"> </a>
 
 	</div>	
 	<div class="row">
@@ -32,7 +32,7 @@
 			<a href="products.html" class="btn">Explore Now &#8594;</a>
 		</div>
 		<div class="col-2">
-			<img src="img/image1.png">
+			<img src="image1.png">
 		</div>
 	</div>	
 	</div>
