--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 	<div class="navbar">
 		<div class="logo">
-			<a href="index.html"><img src="img/logo.png" width="125px"></a>
+			<a href="index.html"><img src="logo.png" width="125px"></a>
 		</div>
 		<nav>
 			<ul>
@@ -43,13 +43,13 @@
 	<div class="small-container">
 	<div class="row">
 		<div class="col-3">
-			<img src="img/cat-1.jpg">
+			<img src="cat-1.jpg">
 		</div>
 		<div class="col-3">
-			<img src="img/cat-2.jpg">
+			<img src="cat-2.jpg">
 		</div>
 		<div class="col-3">
-			<img src="img/cat-3.jpg">
+			<img src="cat-3.jpg">
 		</div>
 	</div>
 	</div>
@@ -60,7 +60,7 @@
 	<h2 class="title">Featured Products</h2>
 	<div class="row">
 		<div class="col-4">
-			<a href="products-details-pro.html"><img src="img/pro.jpg"></a>
+			<a href="products-details-pro.html"><img src="pro.jpg"></a>
 			<h4>Protugal Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
