--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="products-details-brazil.html"><img src="img/bra.jpg"></a>
+			<a href="products-details-brazil.html"><img src="bra.jpg"></a>
 			<h4>Brazil Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -86,7 +86,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="products-details-argentina.html"><img src="img/ang.jpg"></a>
+			<a href="products-details-argentina.html"><img src="ang.jpg"></a>
 			<h4>Argentina Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -103,7 +103,7 @@
 	<h2 class="title">Latest Products</h2>
 	<div class="row">
 		<div class="col-4">
-			<a href="mu-cr7.html"><img src="img/man.jpg"></a>
+			<a href="mu-cr7.html"><img src="man.jpg"></a>
 			<h4>Manchester United Home Kit<br>CR7</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -116,7 +116,7 @@
 			<p>RS:-1700</p>
 		</div>
 		<div class="col-4">
-			<a href="real.html"><img src="img/real.jpg"></a>
+			<a href="real.html"><img src="real.jpg"></a>
 			<h4>Real Madrid<br> 14 Time Champaion</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -129,7 +129,7 @@
 			<p>RS:-2000</p>
 		</div>
 		<div class="col-4">
-			<a href="city.html"><img src="img/ct.jpg"></a>
+			<a href="city.html"><img src="ct.jpg"></a>
 			<h4>Manchester City<br>2021/22 EPL Champaion</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -142,7 +142,7 @@
 			<p>RS:-1600</p>
 		</div>
 		<div class="col-4">
-			<a href="fcb.html"><img src="img/brca.jpg"></a>
+			<a href="fcb.html"><img src="brca.jpg"></a>
 			<h4>Barcelona home Kit<br>Lewandowski</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -158,7 +158,7 @@
 		</div>
 		<div class="row">
 		<div class="col-4">
-			<a href="psg.html"><img src="img/messi.jpg"></a>
+			<a href="psg.html"><img src="messi.jpg"></a>
 			<h4>PSG Home Kit<br>Messi</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -171,7 +171,7 @@
 			<p>RS:-1700</p>
 		</div>
 		<div class="col-4">
-			<a href="bay.html"><img src="img/bay.jpg"></a>
+			<a href="bay.html"><img src="bay.jpg"></a>
 			<h4>Bayern Munchen<br>De Ligt</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -184,7 +184,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="th.html"><img src="img/son.jpg"></a>
+			<a href="th.html"><img src="son.jpg"></a>
 			<h4>Tottenham Hotspur<br>Son Heung-Min</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -197,7 +197,7 @@
 			<p>RS:-1400</p>
 		</div>
 		<div class="col-4">
-			<a href="bvb.html"><img src="img/bvb.jpg">
+			<a href="bvb.html"><img src="bvb.jpg">
 			<h4>Dortmund home Kit<br>Bellingham</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -219,7 +219,7 @@
 	<div class="small-container">
 		<div class="row">
 			<div class="col-2">
-				<img src="img/image1.png" class="offer-img">
+				<img src="image1.png" class="offer-img">
 			</div>
 			<div class="col-2">
 				<p>Exclusively Available on Hamro Jersey</p>
@@ -242,12 +242,12 @@
 				<h3>Download Our App</h3>
 				<p>Download App For Android and ios mobile phone </p>
 				<div class="app-logo">
-					<img src="img/play-store.png">
-					<img src="img/app-store.png">
+					<img src="play-store.png">
+					<img src="app-store.png">
 				</div>
 			</div>
 			<div class="footer-col-2">
-				<a href="index.html"><img src="img/whitelogo.png" width="125px"></a>
+				<a href="index.html"><img src="whitelogo.png" width="125px"></a>
 				<p></p>
 			</div>
 			<div class="footer-col-4">
