--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 			<p>RS:-1400</p>
 		</div>
 		<div class="col-4">
-			<a href="bvb.html"><img src="bvb.jpg">
+			<a href="bvb.html"><img src="Bvb.jpg">
 			<h4>Dortmund home Kit<br>Bellingham</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -261,7 +261,7 @@
 			</div>
 		</div>
 		<hr>
-		<p class="Copyright">Copyright 2022 - Hamro Jersey</p>
+		<p class="Copyright">Copyright 2022 - Ravi Ghimire</p>
 	</div>
 </div>
 
