--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <Head>
-	<title></title>
+	<title>Ravi Ghimire</title>
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap" 
 	rel="stylesheet">
