--- a/cart.html
+++ b/cart.html
@@ -1,7 +1,7 @@
 <html>
 <Head>
 	<title>Hamro Jersey Products</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap" 
 	rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,7 +11,7 @@
 	<div class="container">
 	<div class="navbar">
 		<div class="logo">
-			<a href="index.html"><img src="img/logo.png" width="125px"></a>
+			<a href="index.html"><img src="logo.png" width="125px"></a>
 		</div>
 		<nav>
 			<ul>
@@ -22,7 +22,7 @@
 				<li><a href="account.html">Account</a></li>
 			</ul>
 		</nav>
-		<a href="cart.html"><img src="img/cart.png" width="40px" height="40px"></a>
+		<a href="cart.html"><img src="cart.png" width="40px" height="40px"></a>
 			
 		
 	</div>
@@ -39,7 +39,7 @@
 		</tr>
 		<tr>
 			<td><div class="cart-info">
-				<img src="img/pro.jpg">
+				<img src="pro.jpg">
 				<div>
 					<p>Portugal World cup Jersey</p>
 					<small>Price:1500</small>
@@ -65,7 +65,7 @@
 		</tr>
 		<tr>
 			<td><div class="cart-info">
-				<img src="img/ct.jpg">
+				<img src="ct.jpg">
 				<div>
 					<p>Manchester City Jersey</p>
 					<small>Price:1600</small>
@@ -103,12 +103,12 @@
 				<h3>Download Our App</h3>
 				<p>Download App For Android and ios mobile phone </p>
 				<div class="app-logo">
-					<img src="img/play-store.png">
-					<img src="img/app-store.png">
+					<img src="play-store.png">
+					<img src="app-store.png">
 				</div>
 			</div>
 			<div class="footer-col-2">
-				<img src="img/whitelogo.png" width="125px">
+				<img src="whitelogo.png" width="125px">
 				<p></p>
 			</div>
 			<div class="footer-col-4">
@@ -122,7 +122,7 @@
 			</div>
 		</div>
 		<hr>
-		<p class="Copyright">Copyright 2022 - Hamro Jersey</p>
+		<p class="Copyright">Copyright 2022 - Ravi Gmr</p>
 	</div>
 </div>
 
