--- a/products.html
+++ b/products.html
@@ -1,7 +1,7 @@
 <html>
 <Head>
-	<title>Hamro Jersey Products</title>
-	<link rel="stylesheet" href="css/style.css">
+	<title>Products</title>
+	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap" 
 	rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,7 +11,7 @@
 	<div class="container">
 	<div class="navbar">
 		<div class="logo">
-			<a href="index.html"><img src="img/logo.png" width="125px"></a>
+			<a href="index.html"><img src="logo.png" width="125px"></a>
 		</div>
 		<nav>
 			<ul>
@@ -22,7 +22,7 @@
 				<li><a href="account.html">Account</a></li>
 			</ul>
 		</nav>
-		<a href="cart.html"><img src="img/cart.png" width="40px" height="40px">
+		<a href="cart.html"><img src="cart.png" width="40px" height="40px">
 	</a>		
 		
 	</div>
@@ -44,7 +44,7 @@
 	</div>
 	<div class="row">
 		<div class="col-4">
-			<a href="products-details-pro.html"><img src="img/pro.jpg"></a>
+			<a href="products-details-pro.html"><img src="pro.jpg"></a>
 			<h4>Protugal Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -57,7 +57,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="products-details-brazil.html"><img src="img/bra.jpg"></a>
+			<a href="products-details-brazil.html"><img src="bra.jpg"></a>
 			<h4>Brazil Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -70,7 +70,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="products-details-croatia.html"><img src="img/cro.jpg"></a>
+			<a href="products-details-croatia.html"><img src="cro.jpg"></a>
 			<h4>Croatia Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -83,7 +83,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="products-details-argentina.html"><img src="img/ang.jpg"></a>
+			<a href="products-details-argentina.html"><img src="ang.jpg"></a>
 			<h4>Argentina Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -101,7 +101,7 @@
 	
 	<div class="row">
 		<div class="col-4">
-			<a href="spain.html"><img src="img/spa.jpg"></a>
+			<a href="spain.html"><img src="spa.jpg"></a>
 			<h4>Spain Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -114,7 +114,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="ger.html"><img src="img/ger.jpg"></a>
+			<a href="ger.html"><img src="ger.jpg"></a>
 			<h4>Germany Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -127,7 +127,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="bel.html"><img src="img/bel.jpg"></a>
+			<a href="bel.html"><img src="bel.jpg"></a>
 			<h4>Belgium Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -140,7 +140,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="eng.html"><img src="img/eng.jpg"></a>
+			<a href="eng.html"><img src="eng.jpg"></a>
 			<h4>England Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -156,7 +156,7 @@
 		</div>
 		<div class="row">
 		<div class="col-4">
-			<a href="mex.html"><img src="img/mex.jpg"></a>
+			<a href="mex.html"><img src="mex.jpg"></a>
 			<h4>mexcio Home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -169,7 +169,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="usa.html"><img src="img/usa.jpg"></a>
+			<a href="usa.html"><img src="usa.jpg"></a>
 			<h4>USA home kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -182,7 +182,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="kor.html"><img src="img/kor.jpg"></a>
+			<a href="kor.html"><img src="kor.jpg"></a>
 			<h4>Korea home kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -195,7 +195,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="jap.html"><img src="img/japa.jpg"></a>
+			<a href="jap.html"><img src="japa.jpg"></a>
 			<h4>Japan home Kit</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -225,12 +225,12 @@
 				<h3>Download Our App</h3>
 				<p>Download App For Android and ios mobile phone </p>
 				<div class="app-logo">
-					<img src="img/play-store.png">
-					<img src="img/app-store.png">
+					<img src="play-store.png">
+					<img src="app-store.png">
 				</div>
 			</div>
 			<div class="footer-col-2">
-				<img src="img/whitelogo.png" width="125px">
+				<img src="whitelogo.png" width="125px">
 				<p></p>
 			</div>
 			<div class="footer-col-4">
@@ -244,7 +244,7 @@
 			</div>
 		</div>
 		<hr>
-		<p class="Copyright">Copyright 2022 - Hamro Jersey</p>
+		<p class="Copyright">Copyright 2022 - Ravi Ghimire</p>
 	</div>
 </div>
 
