--- a/product2.html
+++ b/product2.html
@@ -1,7 +1,7 @@
 <html>
 <Head>
-	<title>Hamro Jersey Products</title>
-	<link rel="stylesheet" href="css/style.css">
+	<title>Products</title>
+	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap" 
 	rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,7 +11,7 @@
 	<div class="container">
 	<div class="navbar">
 		<div class="logo">
-			<a href="index.html"><img src="img/logo.png" width="125px"></a>
+			<a href="index.html"><img src="logo.png" width="125px"></a>
 		</div>
 		<nav>
 			<ul>
@@ -22,7 +22,7 @@
 				<li><a href="account.html">Account</a></li>
 			</ul>
 		</nav>
-		<a href="cart.html"><img src="img/cart.png" width="40px" height="40px">
+		<a href="cart.html"><img src="cart.png" width="40px" height="40px">
 	</a>		
 		
 	</div>
@@ -44,7 +44,7 @@
 	</div>
 	<div class="row">
 		<div class="col-4">
-			<a href="mu-cr7.html"><img src="img/man.jpg"></a>
+			<a href="mu-cr7.html"><img src="man.jpg"></a>
 			<h4>Manchester United Home Kit<br>CR7</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -57,7 +57,7 @@
 			<p>RS:-1700</p>
 		</div>
 		<div class="col-4">
-			<a href="real.html"><img src="img/real.jpg"></a>
+			<a href="real.html"><img src="real.jpg"></a>
 			<h4>Real Madrid<br> 14 Time Champaion</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -70,7 +70,7 @@
 			<p>RS:-2000</p>
 		</div>
 		<div class="col-4">
-			<a href="city.html"><img src="img/ct.jpg"></a>
+			<a href="city.html"><img src="ct.jpg"></a>
 			<h4>Manchester City<br>2021/22 EPL Champaion</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -83,7 +83,7 @@
 			<p>RS:-1600</p>
 		</div>
 		<div class="col-4">
-			<a href="fcb.html"><img src="img/brca.jpg"></a>
+			<a href="fcb.html"><img src="brca.jpg"></a>
 			<h4>Barcelona home Kit<br>Lewandowski</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -99,7 +99,7 @@
 		</div>
 		<div class="row">
 		<div class="col-4">
-			<a href="psg.html"><img src="img/messi.jpg"></a>
+			<a href="psg.html"><img src="messi.jpg"></a>
 			<h4>PSG Home Kit<br>Messi</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -112,7 +112,7 @@
 			<p>RS:-1700</p>
 		</div>
 		<div class="col-4">
-			<a href="bay.html"><img src="img/bay.jpg"></a>
+			<a href="bay.html"><img src="bay.jpg"></a>
 			<h4>Bayern Munchen<br>De Ligt</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -125,7 +125,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="th.html"><img src="img/son.jpg"></a>
+			<a href="th.html"><img src="son.jpg"></a>
 			<h4>Tottenham Hotspur<br>Son Heung-Min</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -138,7 +138,7 @@
 			<p>RS:-1400</p>
 		</div>
 		<div class="col-4">
-			<a href="bvb.html"><img src="img/bvb.jpg"></a>
+			<a href="bvb.html"><img src="bvb.jpg"></a>
 			<h4>Dortmund home Kit<br>Bellingham</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -154,7 +154,7 @@
 		</div>
 		<div class="row">
 		<div class="col-4">
-			<a href="ben.html"><img src="img/rea.jpg"></a>
+			<a href="ben.html"><img src="rea.jpg"></a>
 			<h4> Real Madrid Home Kit<br> benzema</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -167,7 +167,7 @@
 			<p>RS:-1700</p>
 		</div>
 		<div class="col-4">
-			<a href="ro.html"><img src="img/ro.jpg"></a>
+			<a href="ro.html"><img src="ro.jpg"></a>
 			<h4>Roma<br>Dybala</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -180,7 +180,7 @@
 			<p>RS:-1500</p>
 		</div>
 		<div class="col-4">
-			<a href="ac.html"><img src="img/ac.jpg"></a>
+			<a href="ac.html"><img src="ac.jpg"></a>
 			<h4>AC Malin<br>Ibrahimovic</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -193,7 +193,7 @@
 			<p>RS:-1400</p>
 		</div>
 		<div class="col-4">
-			<a href="liv.html"><img src="img/liv.jpg"></a>
+			<a href="liv.html"><img src="liv.jpg"></a>
 			<h4>Liverpool home Kit<br>M.Salah</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
@@ -223,12 +223,12 @@
 				<h3>Download Our App</h3>
 				<p>Download App For Android and ios mobile phone </p>
 				<div class="app-logo">
-					<img src="img/play-store.png">
-					<img src="img/app-store.png">
+					<img src="play-store.png">
+					<img src="app-store.png">
 				</div>
 			</div>
 			<div class="footer-col-2">
-				<img src="img/whitelogo.png" width="125px">
+				<img src="whitelogo.png" width="125px">
 				<p></p>
 			</div>
 			<div class="footer-col-4">
@@ -242,7 +242,7 @@
 			</div>
 		</div>
 		<hr>
-		<p class="Copyright">Copyright 2022 - Hamro Jersey</p>
+		<p class="Copyright">Copyright 2022 - Ravi Ghimire</p>
 	</div>
 </div>
 
